@@ -1,3 +1,7 @@
+2009-03-16 Frank Naegler <typo3@naegler.net>
+
+	* added cObj viewhelper to tx_community_view_userprofile_MyGroups
+
 2008-12-16 Ingo Renner  <ingo@typo3.org>
 
 	* added square thumbnails
